ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ec-ingress
  namespace: ec-qas
  labels:
    application: ec
    stage: qas
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/forwarded-for-header: "X-Forwarded-For"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
spec:
  rules:
    - host: ec-qas.deltaww.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ec-frontend-svc
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ec-frontend-svc
                port:
                  number: 80
          - path: /api/auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: ec-auth-svc
                port:
                  number: 80
          - path: /api/file/(.*)
            pathType: Prefix
            backend:
              service:
                name: ec-file-svc
                port:
                  number: 80
          - path: /api/quotation/(.*)
            pathType: Prefix
            backend:
              service:
                name: ec-quotation-svc
                port:
                  number: 80
          - path: /api/vendor/(.*)
            pathType: Prefix
            backend:
              service:
                name: ec-vendor-svc
                port:
                  number: 80
          - path: /api/consignment/(.*)
            pathType: Prefix
            backend:
              service:
                name: ec-consignment-svc
                port:
                  number: 80
